[Issue #21] Added colors to the expand/collapse bubbles and checking if the product has components. - we only allow expanding and collapsing if a product has components - green bubble for expand, red bubble for collapse - a plus and minus sign inside the bubbles would be nice but seems to take a while

--- a/src/css/bubbles.css
+++ b/src/css/bubbles.css
@@ -8,8 +8,6 @@
 }
 .map-bubble-highlight {
     fill:           rgb(189, 31, 11);
-    stroke:         rgb(255, 255, 255);
-    stroke-width:   2;
 }
 .map-arc {
     fill:           none !important;
@@ -17,7 +15,12 @@
     stroke-width:   2 !important;
 }
 .expand-collapse-bubble {
-    fill:           rgb(189, 31, 11);
     stroke:         rgb(255, 255, 255);
     stroke-width:   2;
+}
+.expand-bubble {
+    fill:           rgb(0, 180, 0);
+}
+.collapse-bubble {
+    fill:           rgb(180, 0, 0);
 }
